Adjusting size of project featured image on mobile per issue #45

--- a/web/app/themes/r2/assets/styles/pages/_single-project.scss
+++ b/web/app/themes/r2/assets/styles/pages/_single-project.scss
@@ -6,26 +6,34 @@ body.single-project {
     position: relative;
     margin: #{$padding-sm} -#{$beat} #{$padding-md} 0;
 
-    @include media-md {
-      margin: 0 -#{$padding-lg} 0 0;
-    }
-
     .image {
       height: 0;
       width: 100%;
       display: block;
-      padding-bottom: 50%;
+      padding-bottom: 63.492%;
       background-size: cover;
       transition: opacity .5s ease-out;
+    }
+
+    @include media-md {
+      margin: 0 -#{$padding-lg} 0 0;
+
+      .image {
+        padding-bottom: 50%;
+      }
     }
   }
 
   .header-carousel {
     opacity: 0;
-    padding-bottom: 50%;
+    padding-bottom: 63.492%;
     transition: opacity .5s ease-out;
     &.flickity-enabled {
       opacity: 1;
+    }
+
+    @include media-md {
+      padding-bottom: 50%;
     }
 
     .flickity-viewport {
@@ -98,7 +106,7 @@ body.single-project {
         display: block;
       }
       .first {
-        margin: 0 0 #{$beat * 2};
+        margin: 0 0 #{$beat * 2} -.09em; // offset for optical align-left
       }
       .second {
         @include h4;
